examples/test/testpolicy4146.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4146
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key44: value37
      key22: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value44
      podSelector:
        matchLabels:
          key49: value3
          key47: value4
